events workflow - UX/UI - preparing dockerization - fix CSRF error - dashboard table's filter and group by feature - createUser feature for admins & superadmins

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,34 +1,31 @@
-# Required
-MONGODB_URI=mongodb://localhost:27017/nemesis
+# --- SHARED SECRETS (Same for all environments) ---
 TOKEN_SECRET=your-secret-key-at-least-32-chars
-
-# Server
-PORT=5005
-NODE_ENV=development
-CLIENT_URL=http://localhost:5173
-JWT_EXPIRES_IN=7d
-
-# Email (Resend)
+JWT_EXPIRES_IN=6h
 RESEND_API_KEY=
-EMAIL_FROM=onboarding@resend.dev
-
-# Stripe
 STRIPE_SECRET_KEY=
-STRIPE_WEBHOOK_SECRET=
-
-# Cloudflare R2
-R2_ENDPOINT=
-R2_ACCESS_KEY_ID=
-R2_SECRET_ACCESS_KEY=
-R2_BUCKET_NAME=
-R2_PUBLIC_URL=
-
-# Cloudinary
 CLOUDINARY_CLOUD_NAME=
-CLOUDINARY_API_KEY=
-CLOUDINARY_API_SECRET=
+# ... other shared secrets
 
-# Seed Data
-SEED_PASSWORD=Password1234567!!
-SEED_ADMIN_PASSWORD=Admin1234567!!
-SEED_SUPERADMIN_PASSWORD=SuperAdmin1234567!!
+# --- ENVIRONMENT SELECTOR ---
+# Set to 'development', 'server' (Homelab), or 'production' (Cloud)
+NODE_ENV=development
+
+# --- 1. LOCAL DEVELOPMENT (Default) ---
+MONGODB_URI=mongodb://localhost:27017/nemesis
+CLIENT_URL=http://localhost:5173
+PORT=5005
+
+# --- 2. UBUNTU SERVER (Set NODE_ENV=server) ---
+SERVER_MONGODB_URI=mongodb://mongo:27017/nemesis
+SERVER_CLIENT_URL=https://art.yourdomain.com
+SERVER_PORT=5005
+
+# --- 3. CLOUD PRODUCTION (Set NODE_ENV=production) ---
+PROD_MONGODB_URI=mongodb+srv://...
+PROD_CLIENT_URL=https://myapp.vercel.app
+PROD_PORT=5005
+
+# --- SEED DATA ---
+SEED_PASSWORD=
+SEED_ADMIN_PASSWORD=
+SEED_SUPERADMIN_PASSWORD=
