--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,29 +3,38 @@ services:
     build: ./server
     env_file: ./server/.env
     ports:
-      - "5005:5005"
+      - "${SERVER_PORT:-5005}:5005"
     depends_on:
       - mongo
+    networks:
+      - app-network
     restart: unless-stopped
 
   client:
     build:
       context: ./client
       args:
-        VITE_API_URL: ""
+        # For relative paths through the client's internal Nginx proxy
+        VITE_API_URL: "/"
     ports:
-      - "80:80"
+      - "${CLIENT_PORT:-8080}:80"
     depends_on:
       - server
+    networks:
+      - app-network
     restart: unless-stopped
 
   mongo:
     image: mongo:7
     volumes:
       - mongo-data:/data/db
-    ports:
-      - "27017:27017"
+    networks:
+      - app-network
     restart: unless-stopped
+
+networks:
+  app-network:
+    driver: bridge
 
 volumes:
   mongo-data:
