--- a/server/package.json
+++ b/server/package.json
@@ -10,10 +10,13 @@
     "lint": "eslint .",
     "format": "prettier --write ."
   },
+  "overrides": {
+    "fast-xml-parser": "^5.3.4"
+  },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.700.0",
-    "@aws-sdk/lib-storage": "^3.975.0",
-    "@aws-sdk/s3-request-presigner": "^3.972.0",
+    "@aws-sdk/client-s3": "^3.893.0",
+    "@aws-sdk/lib-storage": "^3.893.0",
+    "@aws-sdk/s3-request-presigner": "^3.893.0",
     "@faker-js/faker": "^10.2.0",
     "bcryptjs": "^3.0.3",
     "busboy": "^1.6.0",
